--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,18 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- security -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-core</artifactId>
+			<version>1.11.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-web</artifactId>
+			<version>1.11.0</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
