--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,14 @@
 			<version>1.2</version>
 		</dependency>
 
-	</dependencies>
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.8.0</version>
+		</dependency>
+
+
+    </dependencies>
 
 	<build>
 		<plugins>
