--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+server.ssl.enabled=true
+server.ssl.key-store=classpath:selfsigned.pfx
+server.ssl.key-store-password=123456
+server.ssl.key-store-type=PKCS12
